--- a/StillWorkingThatList/Views/Home/DishSignup.cshtml
+++ b/StillWorkingThatList/Views/Home/DishSignup.cshtml
@@ -11,6 +11,8 @@
     <input type="text" name="FirstName" required />
     <p>Last Name:</p>
     <input type="text" name="LastName" required />
+    <p>Email:</p>
+    <input type="text" name="Email" required />
     <p>Phone Number:</p>
     <input type="number" pattern="^\d{10}$" name="PhoneNumber" required />
     <p>Name of Dish:</p>
