--- a/StillWorkingThatList/Views/Home/EditRegistration.cshtml
+++ b/StillWorkingThatList/Views/Home/EditRegistration.cshtml
@@ -14,8 +14,8 @@
     <input type="text" name="FirstName" value="@Model.FirstName" />
     <p>Last Name:</p>
     <input type="text" name="LastName" value="@Model.LastName" />
-    <p>Email:</p>
-    <input type="email" name="Email" value="@Model.Email" /><br /><br />
+    @*<p>Email:</p>
+    <input type="email" name="Email" value="@Model.Email" /><br /><br />*@
     <p>Will you be attending?</p>
     @if (Model.Attending == "yes")
     {
