--- a/StillWorkingThatList/Views/Home/Index.cshtml
+++ b/StillWorkingThatList/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <h2>Take Action:</h2>
 <br />
 <table>
-    <tr class="btn btn-lg"><td>@Html.ActionLink("Register", "Registration", "Home")</td></tr>
+    <tr class="btn btn-lg"><td>@Html.ActionLink("Register", "Registration", "Identity")</td></tr>
 
     <tr class="btn btn-lg"><td>@Html.ActionLink("Bring a Dish", "DishSignup", "Home")</td></tr>
 </table>
