--- a/StillWorkingThatList/Views/Shared/_Layout.cshtml
+++ b/StillWorkingThatList/Views/Shared/_Layout.cshtml
@@ -21,7 +21,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("RSVP", "Registration", "Home")</li>
+                    <li>@Html.ActionLink("RSVP", "Registration", "Identity")</li>
+                    <li>@Html.ActionLink("Log In", "Login", "Identity")</li>
                     <li>@Html.ActionLink("Bring A Dish", "DishSignup", "Home")</li>
                     <li>@Html.ActionLink("See Guest List", "ViewAllGuests", "Home")</li>
                     <li>@Html.ActionLink("See Dish List", "ViewAllDishes", "Home")</li>
